--- a/src/components/styles/Home.module.css
+++ b/src/components/styles/Home.module.css
@@ -1,6 +1,54 @@
 .backgroundImage{
-    background-image: url(../../../public/vie.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(../../../public/crama.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 721px;
   }
+
+  .h1{
+    background-color: rgb(0, 0, 0, 0.5);
+    text-align: center;
+    color: white;
+    height: 50px;
+  }
+  .h2{
+    margin-top: 0;
+    margin-left: 5px;
+    text-align: center;
+    color: white;
+  }
+
+  .cont{
+    display: grid ;
+    text-align: center;   
+    grid-template-columns: repeat(3,1fr);
+    gap: 50px;
+    border-radius: 5px;
+    
+  }
+
+  .box {
+    
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    top: 150px;bottom: 15vh;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-left: 20px; 
+    margin-right: 20px;
+    text-align: justify;
+} 
+  
+.img{
+  
+  height: 300px;
+  display: flex ;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px; 
+
+}
+
