--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -1,12 +1,10 @@
 .backgroundImage{  
     background-image: url(../../../public/vie.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.crama{
-    height: 300px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  
 }
 
 .container{
@@ -16,39 +14,31 @@
     font-size: larger;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    
-    
+    justify-content: flex-start;   
+    position: sticky;
+    top:0;
 }
 
 ul{
     /* list-style-type: none;     */
   margin:0;
   padding: 0;
-
 }
 
-
 li{
-    float: left;
-    
+    float: left;    
     display: block;
     color: white;
     padding: 8px 16px;
     text-decoration: none;
-    
-    
-
 }
+
 li a {
     display: block;
     color: aliceblue;
     text-align: center;
     text-decoration: none;
 }
-
-
-  
 
 li a:hover{
     background-color: rgb(0, 0, 0);
