--- a/src/components/styles/Rose.module.css
+++ b/src/components/styles/Rose.module.css
@@ -1,6 +1,23 @@
 .backgroundImage{
   background-image: url(../../../public/vie.jpg);
-  height: 100vh;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+  background-attachment: fixed;
+  
+}
+.container{
+  display: grid ;
+  grid-template-columns: repeat(5,1fr);
+  gap: 20px;
+  text-align: center;
+  margin-left: 50px;
+  margin-top: 30px; 
+}
+.cont{
+  margin-top: 20px;
+  margin-left: 10px;
+  background-color: rgb(187, 185, 185,0.6);
+  border-radius: 5px;
+  width: 200px;
 }
