--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -28,8 +28,8 @@ ul{
 li{
     float: left;    
     display: block;
-    color: white;
-    padding: 8px 16px;
+    /* color: white; */
+    padding: 8px 10px;
     text-decoration: none;
 }
 
@@ -82,6 +82,22 @@ li a:hover{
 }
 
 
+.carticon{
+    width: 25px;
+    margin-top: 5px;
+    padding: 0;
+}
+.loginicon{
+    width: 25px;
+    margin-top: 5px;
+    padding: 0; 
+}
+.searchicon{
+    width: 20px;
+    margin-top: 5px;
+    padding: 0; 
+    border-radius: 10px;
+}
 
 
  
