--- a/src/components/styles/Cart.module.css
+++ b/src/components/styles/Cart.module.css
@@ -16,7 +16,7 @@
   display: flex ;
   flex-direction: row;
   
-  background-color: rgb(187, 185, 185,0.2);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .img{
   width: 30px;
@@ -44,4 +44,17 @@
   width: 23px;
   height: 23px;
   margin-top: 20px;
+}
+.function{
+  width: 200px;
+  display: flex;
+}
+.count{
+  padding-top: 20px;
+}
+.result{
+  padding-top: 26px;
+}
+.head{
+  color: white;
 }
