--- a/src/components/styles/Home.module.css
+++ b/src/components/styles/Home.module.css
@@ -4,14 +4,15 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  height: 721px;
+  /* height: 721px; */
   }
 
   .h1{
     background-color: rgb(0, 0, 0, 0.5);
     text-align: center;
     color: white;
-    height: 50px;
+    padding-top: 20px;
+    height: 72px;
   }
   .h2{
     margin-top: 0;
@@ -19,14 +20,13 @@
     text-align: center;
     color: white;
   }
-
+ 
   .cont{
     display: grid ;
     text-align: center;   
     grid-template-columns: repeat(3,1fr);
     gap: 50px;
-    border-radius: 5px;
-    
+    border-radius: 5px;   
   }
 
   .box {
@@ -49,6 +49,16 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px; 
-
 }
+
+a:link {text-decoration: none; color:white}
+.img:hover {
+  transform: scale(1.05);
+  transition-delay: 0.2s;
+}
+
+
+
+
+
 
