--- a/src/components/styles/White.module.css
+++ b/src/components/styles/White.module.css
@@ -14,10 +14,39 @@
   margin-left: 50px;
   margin-top: 30px;   
 }
+@media (max-width: 1150px) {
+  .container { grid-template-columns: repeat(4, 1fr); }
+}
+@media (max-width: 900px) {
+  .container { grid-template-columns: repeat(3, 1fr); }
+}
+@media (max-width: 750px) {
+  .container { grid-template-columns: repeat(2, 1fr); }
+}
+@media (max-width: 550px) {
+  .container { grid-template-columns: repeat(1, 1fr); }
+}
 .cont{
   margin-top: 20px;
   margin-left: 10px;
-  background-color: rgb(187, 185, 185,0.6);
+  background-color: rgb(185, 185, 185,0.6);
   border-radius: 5px;
-  width: 200px;
+  width: 300px;
+}
+.price{
+margin: 0;
+}
+.btn:hover {
+  background-color: rgb(131, 24, 70);
+  color: white;
+}
+.btn:active{
+  transform: translateY(2px);
+}
+
+.btn{
+  background-color: rgb(126, 231, 126);
+  border: none;
+  border-radius: 5px;
+  
 }
