--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -1,10 +1,10 @@
 .backgroundImage{  
-    background-image: url(../../../public/vie.jpg);
+  background-image: url(../../../public/vie.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  
+  height: 721px;
 }
 
 .container{
@@ -28,7 +28,6 @@ ul{
 li{
     float: left;    
     display: block;
-    /* color: white; */
     padding: 8px 8px;
     text-decoration: none;
 }
@@ -41,7 +40,8 @@ li a {
 }
 
 li a:hover{
-    background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.5);
+  border-radius: 5px;  
 }
 
 .active{
@@ -81,7 +81,6 @@ li a:hover{
     width: auto;
 }
 
-
 .carticon{
     width: 25px;
     margin-top: 5px;
@@ -97,6 +96,11 @@ li a:hover{
     margin-top: 5px;
     padding: 0; 
     border-radius: 10px;
+}
+.numb{
+  color:white;
+  padding-top:1px;
+  font-size: 14px;
 }
 
 
